--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/asesorias_db
 spring.datasource.username=postgres
-spring.datasource.password=josue
+spring.datasource.password=Yampol21ab
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
