--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/asesorias_db
 spring.datasource.username=postgres
-spring.datasource.password=armando200
+spring.datasource.password=mike
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 
