--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/asesorias_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=mike
+spring.datasource.password=Yampol21ab
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
